# serene-update-assistant

./: .gitignore  CMakeLists.txt  README.md  serene-update-assistant  serene-update-assistant.spec
cui/src/: CMakeLists.txt  main.cpp
gui/src/: CMakeLists.txt  main.cpp
include/: serene_updater.hpp
lib/src/: CMakeLists.txt  serene_updater.cpp
serene-update-assistant-gui/: .gitignore  CMakeLists.txt  IPC_Serene.rep  ansiescapecodehandler.cpp  dbus_client.cpp  dbus_client.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  net.fascode.serene.updater.policy  net.fascode.serenelinux.serene_updater_assistant.dbus.xml  resources.qrc  serene-update-assistant-gui_ja_JP.ts  serene_dbus_adaptor.cpp  serene_dbus_adaptor.h  serene_dbus_interface.cpp  serene_dbus_interface.h  updatercore.cpp  updatercore.h  updatertray.cpp  updatertray.h
